--- a/Native.Points/android/app/src/main/AndroidManifest.xml
+++ b/Native.Points/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="true"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      tools:replace="android:appComponentFactory"
+      >
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
