--- a/Native.Points/android/gradle.properties
+++ b/Native.Points/android/gradle.properties
@@ -16,3 +16,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=my-upload-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=Reaper307
+MYAPP_RELEASE_KEY_PASSWORD=Reaper307
