--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@points/shared": "file:../Shared.Points",
+    "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
     "class-validator": "^0.8.5",
     "formik": "1.5.7",
@@ -22,13 +23,13 @@
     "react-native": "0.59.3",
     "react-native-config": "^0.11.7",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-image-picker": "^0.26.7",
+    "react-native-image-picker": "^1.0.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.7.1",
-    "react-native-permissions": "^1.1.1",
+    "react-native-permissions": "^1.2.0",
     "react-native-photo-view": "git+https://github.com/tomtom94/react-native-photo-view.git",
     "react-native-scrollable-tab-view": "git+https://github.com/happypancake/react-native-scrollable-tab-view.git",
-    "react-native-sentry": "^0.39.0",
+    "react-native-sentry": "^0.43.2",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-vector-icons": "6.3.0",
     "react-navigation": "^3.11.0",
