--- a/Shared.Points/package.json
+++ b/Shared.Points/package.json
@@ -8,11 +8,13 @@
         "accesscontrol": "^2.2.1",
         "bcrypt": "^3.0.6",
         "class-validator": "^0.8.1",
-        "mongoose": "^5.6.9",
-        "typescript": "^2.9.1"
+        "mongoose": "^5.6.9"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
-        "@types/mongoose": "^5.5.12"
+        "@types/mongoose": "^5.5.12",
+        "reflect-metadata": "^0.1.13",
+        "typegoose": "^5.9.0",
+        "typescript": "^3.5.3"
     }
 }
